GROOVY-11849: support preview features